kubernetes/apps/media/plex/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "plex"
    hajimari.io/group: "Services"
    hajimari.io/icon: "mdi:plex"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "plex.${SECRET_DOMAIN}"
      secretName: "plex.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: plex.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
